Bug 1778930 - Fix alignment of resolution buttons
- returns resolution buttons to aligning horizontally rather than
  vertically
- hides 'mark as duplicate' button in main edit form when value is
  RESOLVED or VERIFIED to avoid it dropping down to the next line and
  pushing the bottom resolution buttons off the screen

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -22,6 +22,7 @@
   padding: 1px 0;
 }
 
+.inline,
 .module .field .inline {
   display: table-cell;
   width: auto;
